Rescrape empty tweets

--- a/Notebooks/Tweets_Scraper.ipynb
+++ b/Notebooks/Tweets_Scraper.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,11 +70,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "idx = 13564\n"
+    "len(data)==len(os.listdir(root))"
    ]
   },
   {
@@ -113,6 +124,164 @@
     "                    txt.write(client.get_tweet(id=id)[0].text)\n",
     "    except:\n",
     "        err_ids.append(id)\n",
+    "        continue\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[974568141844971520,\n",
+       " 1161756728167288832,\n",
+       " 15251368113,\n",
+       " 1068045181172236288,\n",
+       " 1162389366611881984,\n",
+       " 783728599899578368,\n",
+       " 1255139255027785730,\n",
+       " 134657296096690177,\n",
+       " 41079524024258560,\n",
+       " 1045379473556803584]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('../err_ids.txt') as ids:\n",
+    "    err_ids = [int(i) for i in ids.readlines()]\n",
+    "err_ids[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import GetOldTweets3 as got"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tweetmanager = got.manager."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Response(data=None, includes={}, errors=[{'value': '974568141844971520', 'detail': 'Could not find tweet with id: [974568141844971520].', 'title': 'Not Found Error', 'resource_type': 'tweet', 'parameter': 'id', 'resource_id': '974568141844971520', 'type': 'https://api.twitter.com/2/problems/resource-not-found'}], meta={})"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client.get_tweet(id= err_ids[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['tweet_id', 'sarcastic'], dtype='object')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root = '/home/karthiktiwari/Data/Sarcasm Detection'\n",
+    "empty_fn = []\n",
+    "empty_id = []\n",
+    "for idx,txt_file in enumerate(os.listdir(root)):\n",
+    "    with open(os.path.join(root, txt_file), 'r') as tweet:\n",
+    "        temp = tweet.read()\n",
+    "        if len(temp)==0:\n",
+    "            tweet_id = data.loc[idx, 'tweet_id']\n",
+    "            empty_id.append(tweet_id)\n",
+    "            empty_fn.append(txt_file)\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  3%|▎         | 300/10735 [01:55<1:17:48,  2.24it/s]Rate limit exceeded. Sleeping for 786 seconds.\n",
+      "  6%|▌         | 600/10735 [17:29<1:01:26,  2.75it/s]Rate limit exceeded. Sleeping for 754 seconds.\n",
+      "  8%|▊         | 900/10735 [31:49<56:57,  2.88it/s]Rate limit exceeded. Sleeping for 795 seconds.\n",
+      " 11%|█         | 1200/10735 [46:47<55:01,  2.89it/s]Rate limit exceeded. Sleeping for 798 seconds.\n",
+      " 14%|█▍        | 1500/10735 [1:01:47<56:04,  2.75it/s]  Rate limit exceeded. Sleeping for 800 seconds.\n"
+     ]
+    }
+   ],
+   "source": [
+    "err_ids = []\n",
+    "for idx in tqdm(range(len(empty_fn))):\n",
+    "    try:\n",
+    "        filename = os.path.join('/home/karthiktiwari/Data/Sarcasm Detection', empty_fn[idx])\n",
+    "        with open(filename, 'w') as txt:\n",
+    "                txt.write(client.get_tweet(id=empty_id[idx])[0].text)\n",
+    "    except:\n",
+    "        err_ids.append(empty_id[idx])\n",
     "        continue\n",
     "        "
    ]
