Fixed blunders resulting in loss of data

--- a/Notebooks/Tweets_Scraper.ipynb
+++ b/Notebooks/Tweets_Scraper.ipynb
@@ -7,13 +7,15 @@
    "outputs": [],
    "source": [
     "import tweepy\n",
+    "import pandas as pd\n",
     "from tqdm import tqdm\n",
-    "import os"
+    "import os\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,11 +33,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "data = pd.read_csv('/home/karthiktiwari/Documents/Projects/Sarcasm_Detection/Dataset/Sarcasm_dataset.csv')"
    ]
   },
@@ -70,46 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(data)==len(os.listdir(root))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 19%|█▊        | 20263/108241 [04:39<7:31:30,  3.25it/s]Rate limit exceeded. Sleeping for 621 seconds.\n",
-      " 20%|█▉        | 21164/108241 [19:41<7:25:31,  3.26it/s]Rate limit exceeded. Sleeping for 620 seconds.\n",
-      " 20%|██        | 22064/108241 [34:43<7:50:53,  3.05it/s]Rate limit exceeded. Sleeping for 619 seconds.\n",
-      " 21%|██        | 22964/108241 [53:37<14:10:32,  1.67it/s]Rate limit exceeded. Sleeping for 387 seconds.\n",
-      " 22%|██▏       | 23864/108241 [1:04:48<7:11:50,  3.26it/s]Rate limit exceeded. Sleeping for 617 seconds.\n",
-      " 23%|██▎       | 24764/108241 [1:19:48<7:58:28,  2.91it/s]Rate limit exceeded. Sleeping for 618 seconds.\n",
-      " 24%|██▎       | 25664/108241 [1:37:44<11:39:19,  1.97it/s]Rate limit exceeded. Sleeping for 444 seconds.\n",
-      " 25%|██▍       | 26564/108241 [1:53:31<11:40:59,  1.94it/s]Rate limit exceeded. Sleeping for 399 seconds.\n",
-      " 25%|██▌       | 27464/108241 [2:07:45<11:28:35,  1.96it/s]Rate limit exceeded. Sleeping for 448 seconds.\n",
-      " 26%|██▌       | 28364/108241 [2:22:50<11:03:29,  2.01it/s]Rate limit exceeded. Sleeping for 445 seconds.\n",
-      " 27%|██▋       | 29264/108241 [2:37:52<11:13:47,  1.95it/s]Rate limit exceeded. Sleeping for 444 seconds.\n",
-      " 28%|██▊       | 30164/108241 [2:52:56<11:01:29,  1.97it/s]Rate limit exceeded. Sleeping for 443 seconds.\n",
-      " 29%|██▊       | 31064/108241 [3:04:58<6:35:07,  3.26it/s]Rate limit exceeded. Sleeping for 622 seconds.\n"
+      "  0%|          | 299/108241 [02:26<13:14:28,  2.26it/s]Rate limit exceeded. Sleeping for 568 seconds.\n"
      ]
     }
    ],
@@ -118,14 +87,13 @@
     "for idx in tqdm(data.index):\n",
     "    id = data.loc[idx, 'tweet_id']\n",
     "    try:\n",
-    "        path = os.path.join('/home/karthiktiwari/Documents/Projects/sarcasm_detection/Data', str(idx)+'.txt')\n",
+    "        path = os.path.join('/home/karthiktiwari/Data/Sarcasm Detection', str(id)+'.txt')\n",
     "        if not os.path.exists(path):\n",
-    "            with open(os.path.join('/home/karthiktiwari/Documents/Projects/sarcasm_detection/Data', str(idx)+'.txt'), 'w') as txt:\n",
+    "            with open(path, 'w') as txt:\n",
     "                    txt.write(client.get_tweet(id=id)[0].text)\n",
     "    except:\n",
     "        err_ids.append(id)\n",
-    "        continue\n",
-    "        "
+    "        continue"
    ]
   },
   {
@@ -161,44 +129,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import GetOldTweets3 as got"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tweetmanager = got.manager."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Response(data=None, includes={}, errors=[{'value': '974568141844971520', 'detail': 'Could not find tweet with id: [974568141844971520].', 'title': 'Not Found Error', 'resource_type': 'tweet', 'parameter': 'id', 'resource_id': '974568141844971520', 'type': 'https://api.twitter.com/2/problems/resource-not-found'}], meta={})"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "client.get_tweet(id= err_ids[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [
@@ -219,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,30 +160,9 @@
     "    with open(os.path.join(root, txt_file), 'r') as tweet:\n",
     "        temp = tweet.read()\n",
     "        if len(temp)==0:\n",
-    "            tweet_id = data.loc[idx, 'tweet_id']\n",
     "            empty_id.append(tweet_id)\n",
     "            empty_fn.append(txt_file)\n",
     "            "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "with open"
    ]
   },
   {
@@ -269,7 +178,38 @@
       "  6%|▌         | 600/10735 [17:29<1:01:26,  2.75it/s]Rate limit exceeded. Sleeping for 754 seconds.\n",
       "  8%|▊         | 900/10735 [31:49<56:57,  2.88it/s]Rate limit exceeded. Sleeping for 795 seconds.\n",
       " 11%|█         | 1200/10735 [46:47<55:01,  2.89it/s]Rate limit exceeded. Sleeping for 798 seconds.\n",
-      " 14%|█▍        | 1500/10735 [1:01:47<56:04,  2.75it/s]  Rate limit exceeded. Sleeping for 800 seconds.\n"
+      " 14%|█▍        | 1500/10735 [1:01:47<56:04,  2.75it/s]  Rate limit exceeded. Sleeping for 800 seconds.\n",
+      " 17%|█▋        | 1800/10735 [1:16:51<50:12,  2.97it/s]Rate limit exceeded. Sleeping for 798 seconds.\n",
+      " 20%|█▉        | 2100/10735 [1:32:29<1:05:03,  2.21it/s]Rate limit exceeded. Sleeping for 762 seconds.\n",
+      " 22%|██▏       | 2400/10735 [1:47:14<56:56,  2.44it/s]Rate limit exceeded. Sleeping for 778 seconds.\n",
+      " 25%|██▌       | 2700/10735 [2:02:24<59:32,  2.25it/s]  Rate limit exceeded. Sleeping for 770 seconds.\n",
+      " 28%|██▊       | 3000/10735 [2:18:04<1:14:40,  1.73it/s]Rate limit exceeded. Sleeping for 731 seconds.\n",
+      " 31%|███       | 3300/10735 [2:32:05<41:04,  3.02it/s]Rate limit exceeded. Sleeping for 792 seconds.\n",
+      " 34%|███▎      | 3600/10735 [2:47:02<41:17,  2.88it/s]Rate limit exceeded. Sleeping for 797 seconds.\n",
+      " 36%|███▋      | 3900/10735 [3:02:18<46:34,  2.45it/s]Rate limit exceeded. Sleeping for 782 seconds.\n",
+      " 39%|███▉      | 4200/10735 [3:17:08<41:41,  2.61it/s]Rate limit exceeded. Sleeping for 793 seconds.\n",
+      " 42%|████▏     | 4500/10735 [3:32:11<34:21,  3.02it/s]Rate limit exceeded. Sleeping for 791 seconds.\n",
+      " 45%|████▍     | 4798/10735 [3:47:19<39:03,  2.53it/s]Rate limit exceeded. Sleeping for 784 seconds.\n",
+      " 47%|████▋     | 5098/10735 [4:02:41<40:31,  2.32it/s]Rate limit exceeded. Sleeping for 764 seconds.\n",
+      " 50%|█████     | 5398/10735 [4:17:21<33:28,  2.66it/s]Rate limit exceeded. Sleeping for 785 seconds.\n",
+      " 53%|█████▎    | 5698/10735 [4:32:49<38:15,  2.19it/s]Rate limit exceeded. Sleeping for 759 seconds.\n",
+      " 56%|█████▌    | 5998/10735 [4:47:15<25:27,  3.10it/s]Rate limit exceeded. Sleeping for 795 seconds.\n",
+      " 59%|█████▊    | 6298/10735 [5:02:33<30:17,  2.44it/s]Rate limit exceeded. Sleeping for 778 seconds.\n",
+      " 61%|██████▏   | 6598/10735 [5:17:44<31:24,  2.20it/s]Rate limit exceeded. Sleeping for 768 seconds.\n",
+      " 64%|██████▍   | 6898/10735 [5:33:02<29:39,  2.16it/s]Rate limit exceeded. Sleeping for 752 seconds.\n",
+      " 67%|██████▋   | 7198/10735 [5:47:17<18:06,  3.26it/s]Rate limit exceeded. Sleeping for 798 seconds.\n",
+      " 70%|██████▉   | 7498/10735 [6:03:15<35:39,  1.51it/s]Rate limit exceeded. Sleeping for 742 seconds.\n",
+      " 73%|███████▎  | 7798/10735 [6:17:12<15:02,  3.26it/s]Rate limit exceeded. Sleeping for 807 seconds.\n",
+      " 75%|███████▌  | 8098/10735 [6:33:09<23:32,  1.87it/s]Rate limit exceeded. Sleeping for 752 seconds.\n",
+      " 78%|███████▊  | 8398/10735 [6:48:13<19:06,  2.04it/s]Rate limit exceeded. Sleeping for 749 seconds.\n",
+      " 81%|████████  | 8698/10735 [7:02:15<10:25,  3.25it/s]Rate limit exceeded. Sleeping for 808 seconds.\n",
+      " 84%|████████▍ | 8998/10735 [7:17:17<08:53,  3.26it/s]Rate limit exceeded. Sleeping for 808 seconds.\n",
+      " 87%|████████▋ | 9298/10735 [7:32:18<07:38,  3.14it/s]Rate limit exceeded. Sleeping for 808 seconds.\n",
+      " 89%|████████▉ | 9598/10735 [7:48:21<09:42,  1.95it/s]Rate limit exceeded. Sleeping for 747 seconds.\n",
+      " 92%|█████████▏| 9898/10735 [8:03:23<06:48,  2.05it/s]Rate limit exceeded. Sleeping for 747 seconds.\n",
+      " 95%|█████████▍| 10198/10735 [8:18:25<04:34,  1.95it/s]Rate limit exceeded. Sleeping for 747 seconds.\n",
+      " 98%|█████████▊| 10498/10735 [8:32:33<01:12,  3.29it/s]Rate limit exceeded. Sleeping for 800 seconds.\n",
+      "100%|██████████| 10735/10735 [8:47:55<00:00,  2.95s/it]\n"
      ]
     }
    ],
@@ -284,6 +224,117 @@
     "        err_ids.append(empty_id[idx])\n",
     "        continue\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1081"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(err_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1081"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(empty_fn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "err_ids = [str(i)+'\\n' for i in err_ids]\n",
+    "with open('../err_ids.txt', 'w') as txtfile:\n",
+    "    txtfile.writelines(err_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random_files = [str(random.randint(0,len(os.listdir(root))))+'.txt' for i in range(10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "61984.txt dil lagaya tha dil lagi ka liya bangaya rog zindge ka liye\n",
+      "\n",
+      "104266.txt @kuldpvys Abe o.. Satire ka base h.. N satire bhi na maare... Irony. 😒\n",
+      "\n",
+      "78619.txt DEKHIYE EN KISANO KO 2019 KE LIYE APNI JMIN TAYAR KAR RHE HAI, DHARTI MA SE JURE JURE PURE HINDUSTAN SE AAYE KISANO KA HAS KAR MAZAK URA RHE HAI.. https://t.co/VmEDdBMK4u\n",
+      "\n",
+      "72098.txt @Immortalizeboy tu aag laga 😒 @Satire_Guru\n",
+      "\n",
+      "20105.txt RT Apna vyauhar hoga aise jal mein kamal rehata hai jaise Saansaarik vyavahaar tab hogaa, jab mujhe Saakshaatkaar hoga #Asaramayan #Bapuji\n",
+      "\n",
+      "62619.txt @cheers2wisdom @Uber_India @UberINSupport @Uber Uber bhi Indians se dukhi hai...\n",
+      "🤔🤔🤔\n",
+      "\n",
+      "87293.txt @Sidloves1 sahi hai beta !! bahot aage ayegi😂😂\n",
+      "\n",
+      "54879.txt @smartdoc396 @codendecode @GauravPandhi mazak mat kara kar ! Pls !\n",
+      "Modi gujarat me hi chauda ho sakta...just like mulayam\n",
+      "\n",
+      "79018.txt Rat ke 2:30 baje \n",
+      "Koi Pyr me hsta hoga,,\n",
+      "Koi Pyr me rota hoga,,\n",
+      "\n",
+      "Meanwhile \n",
+      "Muje hi kyunn \"BHUKH\" lagti haii..🙁\n",
+      "\n",
+      "(Bus etneme,,, me khus hunn)\n",
+      "#justforfun\n",
+      "\n",
+      "21651.txt She:\"Aap kahan rehte ho?\"\n",
+      "Me: \"Jee,auqaat mein.\"\n",
+      "#sarcasm\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for f in random_files:\n",
+    "    with open(os.path.join(root,f), 'r') as temp:\n",
+    "        print(f,temp.read())\n",
+    "    print()"
    ]
   },
   {
