Train test split and pickling the words array

--- a/Notebooks/Modelling.ipynb
+++ b/Notebooks/Modelling.ipynb
@@ -156,6 +156,20 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "37733f06-e9dd-4560-8d29-bf160072d1f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import StratifiedShuffleSplit\n",
+    "sss = StratifiedShuffleSplit(n_splits=1, test_size=0.1, random_state=0)\n",
+    "for train_index, test_index in sss.split(dataset.loc[:, 'tweet_id'], dataset.loc[:, 'sarcastic']):\n",
+    "    train_df = dataset.iloc[train_index,:]\n",
+    "    test_df = dataset.iloc[test_index,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "f80e1282-3ac2-4d0b-9502-dc9665d6aacc",
    "metadata": {},
    "outputs": [],
@@ -165,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "97387f48-1acf-43a2-b4f4-e65a2232c19f",
    "metadata": {},
    "outputs": [],
@@ -266,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2fb1fe07-27e8-4c7d-857d-ccec64d26ee2",
    "metadata": {},
    "outputs": [],
@@ -367,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "id": "aed79a21-82c1-45c9-84bf-ac71eb97436c",
    "metadata": {},
    "outputs": [],
@@ -434,15 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "15d64e2d-82c7-4b56-8c0f-b1e0fe9b84eb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "754bc2d2-95bf-44d5-ae90-083f81a1a98b",
    "metadata": {},
    "outputs": [],
@@ -470,24 +476,75 @@
    "execution_count": 10,
    "id": "b6ecc44f-28d3-4eed-9b18-3a795a8d6a38",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tqdm.pandas()\n",
+    "# cleaned_tweets = train_data.tweet_id.progress_apply(clean)\n",
+    "text = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "89289fe8-8e46-4ba5-96d9-12efa553db0e",
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████| 108241/108241 [06:58<00:00, 258.87it/s]\n",
-      "100%|███████████████████████████████| 108241/108241 [00:00<00:00, 318185.94it/s]\n",
-      "100%|██████████████████████████████| 155003/155003 [00:00<00:00, 1514010.43it/s]\n"
+      "100%|████████████████████████████| 1036166/1036166 [00:00<00:00, 3887071.94it/s]\n"
      ]
     }
    ],
    "source": [
-    "tqdm.pandas()\n",
-    "cleaned_tweets = dataset.tweet_id.progress_apply(clean)\n",
-    "text = []\n",
+    "with open('cleaned_tweets.txt', 'r') as  txt:\n",
+    "    cleaned_tweets = txt.readlines()\n",
+    "cleaned_tweets = cleaned_tweets[0].split(\" \")\n",
     "for i in tqdm(range(len(cleaned_tweets))):\n",
-    "    for word in cleaned_tweets[i]:\n",
-    "        text.append(word)\n",
+    "    word = cleaned_tweets[i]\n",
+    "    text.append(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "12022eb6-d3b0-410d-b91f-55b84a7666bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with open('cleaned_tweets.txt', 'w') as txt:\n",
+    "#     txt.writelines([\" \".join(tweet) for tweet in list(cleaned_tweets)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "22628320-0e02-499d-82f3-bc908deb0c8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cleaned_tweets = list(cleaned_tweets.copy())\n",
+    "# for i in tqdm(range(len(cleaned_tweets))):\n",
+    "#     for word in cleaned_tweets[i]:\n",
+    "#         text.append(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "051686e1-ab05-43e6-b7fb-14fbfe8cbeca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████| 162969/162969 [00:00<00:00, 1613839.05it/s]\n"
+     ]
+    }
+   ],
+   "source": [
     "len(text)\n",
     "from collections import Counter\n",
     "count_dict = Counter(text).most_common(len(set(text))-500)\n",
@@ -497,50 +554,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ea29c008-1b9f-40cb-b735-19e92d21b8d7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('words.txt', 'w') as words:\n",
-    "    words.writelines(text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "id": "da16adf3-da4b-4a3e-aa01-e67025acba82",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = Sarcastic_tweets(dataset,nlp, vocab)"
+    "train_data = Sarcastic_tweets(train_df,nlp, vocab)\n",
+    "test_data = Sarcastic_tweets(test_df, nlp, vocab)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "id": "a86be054-2d5d-4bd0-8e34-e5d2c9dbc056",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'tweet': [1, 163, 1692, 2282, 3224, 3, 337, 3361, 298, 7, 27, 10, 13, 2],\n",
+       "{'tweet': tensor([    1,  4140,    26,    33,   676,   120,    55,    17, 10920, 49595,\n",
+       "            41,     8,   184,   119,     2]),\n",
        " 'label': 1}"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[0]"
+    "train_data[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
+   "id": "3e8cf64b-2d38-4d7a-bfc1-379a7e764241",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.5032232898086557, 0.5031870669745958)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train_df[train_df.sarcastic==0]) / len(train_df), len(test_df[test_df.sarcastic==0]) / len(test_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "97314aa1-ae6f-49ea-86c3-aa1cfe94f872",
    "metadata": {},
    "outputs": [],
@@ -591,41 +660,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "25c19b19-8a5e-48c3-be0a-9b1e2b8e9604",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████| 162972/162972 [00:00<00:00, 1264536.60it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "words=[]\n",
-    "for idx in range(0, vocab.__len__()):\n",
+    "for idx in tqdm(range(0, vocab.__len__())):\n",
     "    words.append(vocab.lookup_index(idx))\n",
     "embs = make_embedding_matrix('/home/karthiktiwari/Data/glove.6B/glove.6B.100d.txt', words)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "e8138c2d-168c-4da6-bae2-6927e28ee0c6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.4967803327759352"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(dataset[dataset['sarcastic']==1]) // len(dataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "38ee1f37-247b-4c1f-a02b-6578a80d917a",
    "metadata": {},
    "outputs": [],
@@ -657,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "id": "90320c65-e765-4aa9-a2e3-c8a6fcac303d",
    "metadata": {},
    "outputs": [],
@@ -688,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "id": "52d8eae5-05a4-4adf-804d-3ae13a2dda1b",
    "metadata": {},
    "outputs": [],
@@ -707,12 +763,13 @@
     "    }\n",
     "\n",
     "#When using dataloader to load data, pay attention to collate_ The FN parameter passes in an overridden function\n",
-    "trainset = DataLoader(data, batch_size=BATCH_SIZE, shuffle=True, num_workers=0, collate_fn=collate_fn)"
+    "trainset = DataLoader(train_data, batch_size=BATCH_SIZE, shuffle=True, num_workers=0, collate_fn=collate_fn)\n",
+    "testset = DataLoader(test_data, batch_size=BATCH_SIZE, shuffle=True, num_workers=0, collate_fn=collate_fn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "id": "6a2297ad-66b9-4b47-9967-47ec130cc968",
    "metadata": {},
    "outputs": [
@@ -720,16 +777,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[     1,     30,  24057,  ...,      0,      0,      0],\n",
-      "        [     1,    983,    122,  ...,      0,      0,      0],\n",
-      "        [     1,   5029,   5667,  ...,      0,      0,      0],\n",
+      "tensor([[    1,    87,   217,  ...,     0,     0,     0],\n",
+      "        [    1,    22,   106,  ...,     0,     0,     0],\n",
+      "        [    1,  8508,    21,  ...,     0,     0,     0],\n",
       "        ...,\n",
-      "        [     1,    553,    158,  ...,      0,      0,      0],\n",
-      "        [     1,      2,      0,  ...,      0,      0,      0],\n",
-      "        [     1, 105953,    853,  ...,      0,      0,      0]])\n",
-      "tensor([0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 1, 1, 1, 1, 0, 1,\n",
-      "        1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 1, 1, 0, 1,\n",
-      "        0, 0, 1, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1])\n"
+      "        [    1,   721,  2834,  ...,     0,     0,     0],\n",
+      "        [    1,     0,  2301,  ...,     0,     0,     0],\n",
+      "        [    1,  1129, 15962,  ...,     0,     0,     0]])\n",
+      "tensor([1, 1, 1, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0,\n",
+      "        0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 0, 1, 1, 0, 0, 0,\n",
+      "        1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1])\n"
      ]
     }
    ],
@@ -750,17 +807,38 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 83%|████████████████████████████████▌      | 1411/1692 [07:28<01:25,  3.29it/s]"
+      "100%|███████████████████████████████████████| 1523/1523 [08:19<00:00,  3.05it/s]\n",
+      "100%|█████████████████████████████████████████| 170/170 [00:46<00:00,  3.64it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train loss on epoch 1=0.2441275974665906\n",
+      "Val loss on epoch 1=0.1828594408929348\n",
+      "Train accuracy on epoch 1 = 0.872927609980302\n",
+      "Val accuracy on epoch 1 = 0.9081801470588236\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████▊| 1517/1523 [07:46<00:01,  3.19it/s]"
      ]
     }
    ],
    "source": [
     "from tqdm import tqdm\n",
-    "epochs=5\n",
+    "epochs=10\n",
     "for epoch in range(epochs):\n",
     "    time.sleep(1)\n",
-    "    total_loss = 0.0\n",
-    "    total_acc=0.0\n",
+    "    total_train_loss = 0.0\n",
+    "    total_val_loss = 0.0\n",
+    "    total_train_acc = 0.0\n",
+    "    total_val_acc = 0.0\n",
+    "    model.train()\n",
     "    for i, batch in enumerate(tqdm(trainset)):\n",
     "        feature, label = batch['token_list'].to(device), batch['label'].to(device)\n",
     "#         batch_length = torch.tensor(33, dtype = torch.int64).unsqueeze(0)\n",
@@ -770,19 +848,40 @@
     "        acc=categorical_accuracy(output,label)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "        \n",
-    "        total_loss += loss.item()\n",
-    "        total_acc += acc.item() \n",
-    "        \n",
+    "        total_train_loss += loss.item()\n",
+    "        total_train_acc += acc.item() \n",
+    "    \n",
+    "    model.eval()\n",
+    "    for i, batch in enumerate(tqdm(testset)):\n",
+    "        feature, label = batch['token_list'].to(device), batch['label'].to(device)\n",
+    "#         batch_length = torch.tensor(33, dtype = torch.int64).unsqueeze(0)\n",
+    "        optimizer.zero_grad()\n",
+    "        output =  model(feature).squeeze()\n",
+    "        loss = loss_function(output, label)\n",
+    "        acc=categorical_accuracy(output,label)\n",
+    "        total_val_loss += loss.item()\n",
+    "        total_val_acc += acc.item() \n",
     "    scheduler.step()    \n",
-    "    print(f\"loss on epoch {epoch+1} = {total_loss/len(trainset)}\")\n",
-    "    print(f\"accuracy on epoch {epoch+1} = {total_acc/len(trainset)}\")"
+    "    print(f\"Train loss on epoch {epoch + 1}={total_train_loss/len(trainset)}\")\n",
+    "    print(f\"Val loss on epoch {epoch + 1}={total_val_loss / len(testset)}\")\n",
+    "    print(f\"Train accuracy on epoch {epoch+1} = {total_train_acc/len(trainset)}\")\n",
+    "    print(f\"Val accuracy on epoch {epoch+1} = {total_val_acc/len(testset)}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "7f35d877-3ea6-4de8-b6a9-5fdec672b00f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model, 'Sarcasm_Classifier.pt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5263bc5-8210-4e66-9c12-1f0ddf19517a",
    "metadata": {},
    "outputs": [],
    "source": []
