--- a/Notebooks/Modelling.ipynb
+++ b/Notebooks/Modelling.ipynb
@@ -825,7 +825,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████▊| 1517/1523 [07:46<00:01,  3.19it/s]"
+      "100%|███████████████████████████████████████| 1523/1523 [07:48<00:00,  3.25it/s]\n",
+      "100%|█████████████████████████████████████████| 170/170 [00:41<00:00,  4.11it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train loss on epoch 2=0.15385459213366565\n",
+      "Val loss on epoch 2=0.19430410467526493\n",
+      "Train accuracy on epoch 2 = 0.9245732107682206\n",
+      "Val accuracy on epoch 2 = 0.9100183823529412\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 94%|████████████████████████████████████▋  | 1431/1523 [07:19<00:31,  2.94it/s]"
      ]
     }
    ],
