--- a/Notebooks/Modelling.ipynb
+++ b/Notebooks/Modelling.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f09b84e0-c458-4235-b307-2fb4825dab62",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "08054cf1-379c-409c-97a6-fbba9d9fb6d3",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
        "(47930, 49597)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "37733f06-e9dd-4560-8d29-bf160072d1f0",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "f80e1282-3ac2-4d0b-9502-dc9665d6aacc",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d82a2cf8-b32c-4948-8133-52ec04de32a1",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "97387f48-1acf-43a2-b4f4-e65a2232c19f",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "2fb1fe07-27e8-4c7d-857d-ccec64d26ee2",
    "metadata": {},
    "outputs": [],
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "aed79a21-82c1-45c9-84bf-ac71eb97436c",
    "metadata": {},
    "outputs": [],
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "754bc2d2-95bf-44d5-ae90-083f81a1a98b",
    "metadata": {},
    "outputs": [],
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "b6ecc44f-28d3-4eed-9b18-3a795a8d6a38",
    "metadata": {},
    "outputs": [],
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "89289fe8-8e46-4ba5-96d9-12efa553db0e",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████| 1036166/1036166 [00:00<00:00, 3838401.19it/s]\n"
+      "100%|████████████████████████████| 1036166/1036166 [00:00<00:00, 3919399.88it/s]\n"
      ]
     }
    ],
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "12022eb6-d3b0-410d-b91f-55b84a7666bc",
    "metadata": {},
    "outputs": [],
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "22628320-0e02-499d-82f3-bc908deb0c8b",
    "metadata": {},
    "outputs": [],
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "051686e1-ab05-43e6-b7fb-14fbfe8cbeca",
    "metadata": {},
    "outputs": [
@@ -464,7 +464,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████| 162969/162969 [00:00<00:00, 1572798.86it/s]\n"
+      "100%|██████████████████████████████| 162969/162969 [00:00<00:00, 1647187.25it/s]\n"
      ]
     }
    ],
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "da16adf3-da4b-4a3e-aa01-e67025acba82",
    "metadata": {},
    "outputs": [],
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "a86be054-2d5d-4bd0-8e34-e5d2c9dbc056",
    "metadata": {},
    "outputs": [
@@ -502,7 +502,7 @@
        " 'label': 0}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "3e8cf64b-2d38-4d7a-bfc1-379a7e764241",
    "metadata": {},
    "outputs": [
@@ -523,7 +523,7 @@
        "(0.5085446715428259, 0.5085614682661745)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "97314aa1-ae6f-49ea-86c3-aa1cfe94f872",
    "metadata": {},
    "outputs": [],
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "25c19b19-8a5e-48c3-be0a-9b1e2b8e9604",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████| 162972/162972 [00:00<00:00, 1902847.26it/s]\n"
+      "100%|██████████████████████████████| 162972/162972 [00:00<00:00, 1850168.79it/s]\n"
      ]
     }
    ],
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "38ee1f37-247b-4c1f-a02b-6578a80d917a",
    "metadata": {},
    "outputs": [],
@@ -628,24 +628,24 @@
     " \n",
     "    def forward(self, sentences, train = True):\n",
     "        embeds = self.word_embeddings(sentences)\n",
-    "        embeds = embeds.permute(1,0,2)\n",
+    "        embeds = embeds.permute(0,1,2)\n",
     "        attn_output, _ = self.attention(embeds, embeds, embeds)\n",
-    "        packed_outputs, (hidden,cell) = self.lstm(attn_output.permute(1,0,2))\n",
-    "        dense_outputs = self.fc(hidden[1])\n",
+    "        packed_outputs, (hidden,cell) = self.lstm(attn_output.permute(0,1,2))\n",
+    "        dense_outputs = self.fc(packed_outputs[:,-1,:])\n",
     "        outputs = dense_outputs\n",
     "        return outputs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "90320c65-e765-4aa9-a2e3-c8a6fcac303d",
    "metadata": {},
    "outputs": [],
    "source": [
     "BATCH_SIZE = 64\n",
-    "nlabel = 4\n",
-    "num_layers = 4\n",
+    "nlabel = 2\n",
+    "num_layers = 1\n",
     "hidden_dim = 512\n",
     "EMBEDDING_DIM = embs.shape[1]\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "52d8eae5-05a4-4adf-804d-3ae13a2dda1b",
    "metadata": {},
    "outputs": [],
@@ -688,13 +688,13 @@
     "    }\n",
     "\n",
     "#When using dataloader to load data, pay attention to collate_ The FN parameter passes in an overridden function\n",
-    "trainset = DataLoader(train_data, batch_size=BATCH_SIZE, shuffle=True, num_workers=2, collate_fn=collate_fn)\n",
-    "testset = DataLoader(test_data, batch_size=BATCH_SIZE, shuffle=True, num_workers=2, collate_fn=collate_fn)"
+    "trainset = DataLoader(train_data, batch_size=BATCH_SIZE, shuffle=True, num_workers=0, collate_fn=collate_fn)\n",
+    "testset = DataLoader(test_data, batch_size=BATCH_SIZE, shuffle=True, num_workers=0, collate_fn=collate_fn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "6a2297ad-66b9-4b47-9967-47ec130cc968",
    "metadata": {},
    "outputs": [
@@ -702,16 +702,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[   1,  890, 1975,  ...,    0,    0,    0],\n",
-      "        [   1, 2713, 1531,  ...,    0,    0,    0],\n",
-      "        [   1,  489,   22,  ...,    0,    0,    0],\n",
+      "tensor([[    1,    14,    14,  ...,     0,     0,     0],\n",
+      "        [    1,     0, 77636,  ...,     0,     0,     0],\n",
+      "        [    1,   645,   577,  ...,     0,     0,     0],\n",
       "        ...,\n",
-      "        [   1,   56,   49,  ...,    0,    0,    0],\n",
-      "        [   1,  475,  981,  ...,    0,    0,    0],\n",
-      "        [   1,   22,  734,  ...,    0,    0,    0]])\n",
-      "tensor([0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 0, 1, 1, 1, 0, 1, 1,\n",
-      "        0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 1, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0,\n",
-      "        1, 1, 1, 0, 1, 1, 1, 0, 0, 0, 1, 1, 0, 1, 0, 1])\n"
+      "        [    1,   658, 15731,  ...,     0,     0,     0],\n",
+      "        [    1,    86,  8590,  ...,     0,     0,     0],\n",
+      "        [    1,    97,    90,  ...,     0,     0,     0]])\n",
+      "tensor([0, 1, 0, 0, 1, 1, 0, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1,\n",
+      "        1, 0, 1, 0, 1, 1, 1, 0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0,\n",
+      "        0, 0, 0, 1, 0, 1, 1, 0, 1, 0, 1, 1, 0, 1, 1, 1])\n"
      ]
     }
    ],
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "213339c8-1f2c-405a-a76a-607974233c27",
    "metadata": {},
    "outputs": [
@@ -732,180 +732,180 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 1372/1372 [03:56<00:00,  5.80it/s]\n",
-      "100%|█████████████████████████████████████████| 153/153 [00:26<00:00,  5.67it/s]\n"
+      "100%|███████████████████████████████████████| 1372/1372 [07:06<00:00,  3.22it/s]\n",
+      "100%|█████████████████████████████████████████| 153/153 [00:41<00:00,  3.65it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss on epoch 1=0.20487794437128018\n",
-      "Val loss on epoch 1=0.13197319763499538\n",
-      "Train accuracy on epoch 1 = 0.9047110362233642\n",
-      "Val accuracy on epoch 1 = 0.9493790849361544\n"
+      "Train loss on epoch 1=0.6940904011618639\n",
+      "Val loss on epoch 1=0.6843013319314695\n",
+      "Train accuracy on epoch 1 = 0.5073250728949861\n",
+      "Val accuracy on epoch 1 = 0.4907802286880468\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 1372/1372 [03:59<00:00,  5.73it/s]\n",
-      "100%|█████████████████████████████████████████| 153/153 [00:25<00:00,  5.89it/s]\n"
+      "100%|███████████████████████████████████████| 1372/1372 [07:03<00:00,  3.24it/s]\n",
+      "100%|█████████████████████████████████████████| 153/153 [00:41<00:00,  3.65it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss on epoch 2=0.10355852494720891\n",
-      "Val loss on epoch 2=0.13897294062950644\n",
-      "Train accuracy on epoch 2 = 0.9650715196793003\n",
-      "Val accuracy on epoch 2 = 0.9499019606440675\n"
+      "Train loss on epoch 2=0.5952035750183697\n",
+      "Val loss on epoch 2=0.6035956691682728\n",
+      "Train accuracy on epoch 2 = 0.6422095177559394\n",
+      "Val accuracy on epoch 2 = 0.6261887254278644\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 1372/1372 [03:53<00:00,  5.88it/s]\n",
-      "100%|█████████████████████████████████████████| 153/153 [00:25<00:00,  6.01it/s]\n"
+      "100%|███████████████████████████████████████| 1372/1372 [06:55<00:00,  3.30it/s]\n",
+      "100%|█████████████████████████████████████████| 153/153 [00:42<00:00,  3.61it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss on epoch 3=0.07013668555803\n",
-      "Val loss on epoch 3=0.1653677103523579\n",
-      "Train accuracy on epoch 3 = 0.9781637208715472\n",
-      "Val accuracy on epoch 3 = 0.9481658495329564\n"
+      "Train loss on epoch 3=0.5850541176974947\n",
+      "Val loss on epoch 3=0.5858582271859537\n",
+      "Train accuracy on epoch 3 = 0.6498238581392924\n",
+      "Val accuracy on epoch 3 = 0.6478717319326464\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 1372/1372 [03:54<00:00,  5.85it/s]\n",
-      "100%|█████████████████████████████████████████| 153/153 [00:26<00:00,  5.83it/s]\n"
+      "100%|███████████████████████████████████████| 1372/1372 [06:55<00:00,  3.30it/s]\n",
+      "100%|█████████████████████████████████████████| 153/153 [00:40<00:00,  3.75it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss on epoch 4=0.04838796794652442\n",
-      "Val loss on epoch 4=0.2009711735790559\n",
-      "Train accuracy on epoch 4 = 0.9848517978851719\n",
-      "Val accuracy on epoch 4 = 0.9387581699034747\n"
+      "Train loss on epoch 4=0.4029335146987099\n",
+      "Val loss on epoch 4=0.19048277084149567\n",
+      "Train accuracy on epoch 4 = 0.793318756120198\n",
+      "Val accuracy on epoch 4 = 0.9366830065359477\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 1372/1372 [03:59<00:00,  5.73it/s]\n",
-      "100%|█████████████████████████████████████████| 153/153 [00:29<00:00,  5.20it/s]\n"
+      "100%|███████████████████████████████████████| 1372/1372 [06:49<00:00,  3.35it/s]\n",
+      "100%|█████████████████████████████████████████| 153/153 [00:40<00:00,  3.80it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss on epoch 5=0.037429660767051745\n",
-      "Val loss on epoch 5=0.21819317196587137\n",
-      "Train accuracy on epoch 5 = 0.9874385021865889\n",
-      "Val accuracy on epoch 5 = 0.9406658496732027\n"
+      "Train loss on epoch 5=0.1421992018922034\n",
+      "Val loss on epoch 5=0.13909080071873914\n",
+      "Train accuracy on epoch 5 = 0.9448212767481456\n",
+      "Val accuracy on epoch 5 = 0.9446936273107341\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 1372/1372 [04:23<00:00,  5.21it/s]\n",
-      "100%|█████████████████████████████████████████| 153/153 [00:26<00:00,  5.88it/s]\n"
+      "100%|███████████████████████████████████████| 1372/1372 [06:56<00:00,  3.29it/s]\n",
+      "100%|█████████████████████████████████████████| 153/153 [00:40<00:00,  3.75it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss on epoch 6=0.030133976092553257\n",
-      "Val loss on epoch 6=0.2363111509825864\n",
-      "Train accuracy on epoch 6 = 0.9889190051020408\n",
-      "Val accuracy on epoch 6 = 0.937034313585244\n"
+      "Train loss on epoch 6=0.10946761939468258\n",
+      "Val loss on epoch 6=0.13068755533473164\n",
+      "Train accuracy on epoch 6 = 0.9595936588921283\n",
+      "Val accuracy on epoch 6 = 0.9473937905691807\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 1372/1372 [04:03<00:00,  5.64it/s]\n",
-      "100%|█████████████████████████████████████████| 153/153 [00:26<00:00,  5.78it/s]\n"
+      "100%|███████████████████████████████████████| 1372/1372 [06:44<00:00,  3.39it/s]\n",
+      "100%|█████████████████████████████████████████| 153/153 [00:39<00:00,  3.83it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss on epoch 7=0.02376152977475117\n",
-      "Val loss on epoch 7=0.24208665321949333\n",
-      "Train accuracy on epoch 7 = 0.9905475583090378\n",
-      "Val accuracy on epoch 7 = 0.938623366013072\n"
+      "Train loss on epoch 7=0.08235934715101674\n",
+      "Val loss on epoch 7=0.13952683211833822\n",
+      "Train accuracy on epoch 7 = 0.971870444606414\n",
+      "Val accuracy on epoch 7 = 0.9476552286179237\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 1372/1372 [03:57<00:00,  5.77it/s]\n",
-      "100%|█████████████████████████████████████████| 153/153 [00:26<00:00,  5.79it/s]\n"
+      "100%|███████████████████████████████████████| 1372/1372 [06:56<00:00,  3.29it/s]\n",
+      "100%|█████████████████████████████████████████| 153/153 [00:40<00:00,  3.78it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss on epoch 8=0.020323398205908037\n",
-      "Val loss on epoch 8=0.32888683416192827\n",
-      "Train accuracy on epoch 8 = 0.9915155794460642\n",
-      "Val accuracy on epoch 8 = 0.9326429737159629\n"
+      "Train loss on epoch 8=0.06582125111326233\n",
+      "Val loss on epoch 8=0.16600501620715935\n",
+      "Train accuracy on epoch 8 = 0.9770066508746356\n",
+      "Val accuracy on epoch 8 = 0.9443872547617146\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 1372/1372 [03:55<00:00,  5.82it/s]\n",
-      "100%|█████████████████████████████████████████| 153/153 [00:26<00:00,  5.80it/s]\n"
+      "100%|███████████████████████████████████████| 1372/1372 [06:49<00:00,  3.35it/s]\n",
+      "100%|█████████████████████████████████████████| 153/153 [00:40<00:00,  3.81it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss on epoch 9=0.018304077818404475\n",
-      "Val loss on epoch 9=0.3173206443198366\n",
-      "Train accuracy on epoch 9 = 0.991980988847271\n",
-      "Val accuracy on epoch 9 = 0.9278308823217754\n"
+      "Train loss on epoch 9=0.05529092768537771\n",
+      "Val loss on epoch 9=0.15826339153512045\n",
+      "Train accuracy on epoch 9 = 0.9801711309755509\n",
+      "Val accuracy on epoch 9 = 0.9423325163087034\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 1372/1372 [03:57<00:00,  5.78it/s]\n",
-      "100%|█████████████████████████████████████████| 153/153 [00:26<00:00,  5.81it/s]"
+      "100%|███████████████████████████████████████| 1372/1372 [06:47<00:00,  3.37it/s]\n",
+      "100%|█████████████████████████████████████████| 153/153 [00:40<00:00,  3.81it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss on epoch 10=0.01574406188618003\n",
-      "Val loss on epoch 10=0.43919339763864973\n",
-      "Train accuracy on epoch 10 = 0.9925731900134518\n",
-      "Val accuracy on epoch 10 = 0.924901960721982\n"
+      "Train loss on epoch 10=0.04721802977680292\n",
+      "Val loss on epoch 10=0.19129617234046747\n",
+      "Train accuracy on epoch 10 = 0.9829286625364432\n",
+      "Val accuracy on epoch 10 = 0.9372385619512571\n"
      ]
     },
     {
