--- a/Notebooks/Modelling.ipynb
+++ b/Notebooks/Modelling.ipynb
@@ -417,7 +417,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████| 1036166/1036166 [00:00<00:00, 3919399.88it/s]\n"
+      "100%|██████████| 1036166/1036166 [00:00<00:00, 3078118.28it/s]\n"
      ]
     }
    ],
@@ -464,14 +464,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████| 162969/162969 [00:00<00:00, 1647187.25it/s]\n"
+      "100%|██████████| 158469/158469 [00:00<00:00, 1437354.38it/s]\n"
      ]
     }
    ],
    "source": [
     "len(text)\n",
     "from collections import Counter\n",
-    "count_dict = Counter(text).most_common(len(set(text))-500)\n",
+    "count_dict = Counter(text).most_common(len(set(text))-5000)\n",
     "for tup in tqdm(count_dict):\n",
     "    vocab.add_token(tup[0])"
    ]
@@ -496,7 +496,7 @@
     {
      "data": {
       "text/plain": [
-       "{'tweet': tensor([     1,   2218,      3,     41,    126,   9409,  11028,   1970,      7,\n",
+       "{'tweet': tensor([     1,   2218,      3,  16399,    126,   9409,  11028,      0,      7,\n",
        "           3025,   8938,      3,     25,    642,  11456, 113220,     12,     16,\n",
        "              2]),\n",
        " 'label': 0}"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "25c19b19-8a5e-48c3-be0a-9b1e2b8e9604",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████| 162972/162972 [00:00<00:00, 1850168.79it/s]\n"
+      "100%|██████████| 158472/158472 [00:00<00:00, 1517817.82it/s]\n"
      ]
     }
    ],
@@ -601,17 +601,42 @@
     "words=[]\n",
     "for idx in tqdm(range(0, vocab.__len__())):\n",
     "    words.append(vocab.lookup_index(idx))\n",
-    "embs = make_embedding_matrix('/home/karthiktiwari/Data/glove.6B/glove.6B.100d.txt', words)"
+    "embs = make_embedding_matrix('/home/karthiktiwari/Data/glove.6B/glove.6B.50d.txt', words)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "id": "38ee1f37-247b-4c1f-a02b-6578a80d917a",
    "metadata": {},
    "outputs": [],
    "source": [
     "class LSTMClassifier(nn.Module):\n",
+    "    def __init__(self, embedding_dim, hidden_dim, label_size, batch_size, embedding_weights, num_layers = 1,bidirectional = False):\n",
+    "        super(LSTMClassifier, self).__init__()\n",
+    "        self.hidden_dim = hidden_dim\n",
+    "        self.batch_size = batch_size\n",
+    "        self.embedding_dim = embedding_dim\n",
+    "        self.word_embeddings = nn.Embedding.from_pretrained(embedding_weights, freeze=False, padding_idx=0)\n",
+    "        self.lstm = nn.LSTM(input_size = self.embedding_dim, hidden_size = hidden_dim,\n",
+    "                            num_layers = num_layers, bidirectional = bidirectional,batch_first=True)\n",
+    "        self.fc = nn.Linear(hidden_dim, label_size)\n",
+    " \n",
+    "    def forward(self, sentences, train = True):\n",
+    "        embeds = self.word_embeddings(sentences)\n",
+    "        packed_outputs, _ = self.lstm(embeds)\n",
+    "        outputs = self.fc(packed_outputs[:,-1,:].reshape(self.batch_size,-1))\n",
+    "        return outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b6cd7208",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BidirectionalLSTM(nn.Module):\n",
     "    def __init__(self, embedding_dim, hidden_dim, label_size, batch_size, embedding_weights, num_layers = 1,bidirectional = False):\n",
     "        super(LSTMClassifier, self).__init__()\n",
     "        self.hidden_dim = hidden_dim\n",
@@ -638,19 +663,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
+   "id": "f3cb4aae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class AttnBasedLSTMClassifier(nn.Module):\n",
+    "    def __init__(self, embedding_dim, hidden_dim, label_size, batch_size, embedding_weights, num_layers = 1,bidirectional = False):\n",
+    "        super(LSTMClassifier, self).__init__()\n",
+    "        self.hidden_dim = hidden_dim\n",
+    "        self.batch_size = batch_size\n",
+    "        self.embedding_dim = embedding_dim\n",
+    "        self.attention = nn.MultiheadAttention(embed_dim=self.embedding_dim, num_heads=1)\n",
+    "        self.word_embeddings = nn.Embedding.from_pretrained(embedding_weights, freeze=False, padding_idx=0)\n",
+    "        self.lstm = nn.LSTM(input_size = self.embedding_dim, hidden_size = hidden_dim,\n",
+    "                            num_layers = num_layers, bidirectional = bidirectional,batch_first=True)\n",
+    "        if bidirectional:\n",
+    "            self.fc = nn.Linear(hidden_dim*2, label_size)\n",
+    "        else:\n",
+    "            self.fc = nn.Linear(hidden_dim, label_size)\n",
+    " \n",
+    "    def forward(self, sentences, train = True):\n",
+    "        embeds = self.word_embeddings(sentences)\n",
+    "        embeds = embeds.permute(0,1,2)\n",
+    "        attn_output, _ = self.attention(embeds, embeds, embeds)\n",
+    "        packed_outputs, (hidden,cell) = self.lstm(attn_output.permute(0,1,2))\n",
+    "        dense_outputs = self.fc(packed_outputs[:,-1,:])\n",
+    "        outputs = dense_outputs\n",
+    "        return outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "90320c65-e765-4aa9-a2e3-c8a6fcac303d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "BATCH_SIZE = 64\n",
+    "BATCH_SIZE = 128\n",
     "nlabel = 2\n",
-    "num_layers = 1\n",
-    "hidden_dim = 512\n",
+    "num_layers = 2\n",
+    "hidden_dim = 64\n",
     "EMBEDDING_DIM = embs.shape[1]\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "\n",
     "model = LSTMClassifier(embedding_dim=EMBEDDING_DIM,hidden_dim=hidden_dim,label_size=nlabel, batch_size=BATCH_SIZE, embedding_weights=torch.from_numpy(embs).float(), num_layers=num_layers, bidirectional = False)\n",
+    "# model = BidirectionalLSTM(embedding_dim=EMBEDDING_DIM,hidden_dim=hidden_dim,label_size=nlabel, batch_size=BATCH_SIZE, embedding_weights=torch.from_numpy(embs).float(), num_layers=num_layers, bidirectional = True)\n",
     "model = model.to(device)\n",
     " \n",
     "optimizer = torch.optim.Adam(model.parameters(), lr = 1e-3)\n",
@@ -669,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "52d8eae5-05a4-4adf-804d-3ae13a2dda1b",
    "metadata": {},
    "outputs": [],
@@ -688,13 +746,13 @@
     "    }\n",
     "\n",
     "#When using dataloader to load data, pay attention to collate_ The FN parameter passes in an overridden function\n",
-    "trainset = DataLoader(train_data, batch_size=BATCH_SIZE, shuffle=True, num_workers=0, collate_fn=collate_fn)\n",
-    "testset = DataLoader(test_data, batch_size=BATCH_SIZE, shuffle=True, num_workers=0, collate_fn=collate_fn)"
+    "trainset = DataLoader(train_data, batch_size=BATCH_SIZE, shuffle=True, num_workers=0, collate_fn=collate_fn, drop_last = True)\n",
+    "testset = DataLoader(test_data, batch_size=BATCH_SIZE, shuffle=True, num_workers=0, collate_fn=collate_fn, drop_last = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "6a2297ad-66b9-4b47-9967-47ec130cc968",
    "metadata": {},
    "outputs": [
@@ -702,16 +760,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[    1,    14,    14,  ...,     0,     0,     0],\n",
-      "        [    1,     0, 77636,  ...,     0,     0,     0],\n",
-      "        [    1,   645,   577,  ...,     0,     0,     0],\n",
+      "tensor([[    1,  5635,  1556,  ...,     0,     0,     0],\n",
+      "        [    1,    25,  1297,  ...,     0,     0,     0],\n",
+      "        [    1,     0, 24347,  ...,     0,     0,     0],\n",
       "        ...,\n",
-      "        [    1,   658, 15731,  ...,     0,     0,     0],\n",
-      "        [    1,    86,  8590,  ...,     0,     0,     0],\n",
-      "        [    1,    97,    90,  ...,     0,     0,     0]])\n",
-      "tensor([0, 1, 0, 0, 1, 1, 0, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1,\n",
-      "        1, 0, 1, 0, 1, 1, 1, 0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 0,\n",
-      "        0, 0, 0, 1, 0, 1, 1, 0, 1, 0, 1, 1, 0, 1, 1, 1])\n"
+      "        [    1, 37793,   192,  ...,     0,     0,     0],\n",
+      "        [    1,   645,  3914,  ...,     0,     0,     0],\n",
+      "        [    1,   334,     6,  ...,     0,     0,     0]])\n",
+      "tensor([0, 1, 1, 1, 1, 1, 0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 1, 1, 1, 1, 1, 0, 0,\n",
+      "        0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, 1, 0, 1, 1,\n",
+      "        1, 0, 0, 1, 0, 1, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 1, 0, 0, 1, 0, 0, 1, 0,\n",
+      "        0, 1, 0, 0, 1, 1, 1, 0, 1, 1, 1, 0, 1, 0, 0, 1, 1, 1, 1, 1, 0, 1, 1, 0,\n",
+      "        0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 1, 0,\n",
+      "        1, 0, 0, 1, 0, 1, 0, 1])\n"
      ]
     }
    ],
@@ -724,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "213339c8-1f2c-405a-a76a-607974233c27",
    "metadata": {},
    "outputs": [
@@ -732,193 +793,32 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 1372/1372 [07:06<00:00,  3.22it/s]\n",
-      "100%|█████████████████████████████████████████| 153/153 [00:41<00:00,  3.65it/s]\n"
+      "100%|██████████| 685/685 [07:42<00:00,  1.48it/s]\n",
+      "100%|██████████| 76/76 [00:52<00:00,  1.46it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train loss on epoch 1=0.6940904011618639\n",
-      "Val loss on epoch 1=0.6843013319314695\n",
-      "Train accuracy on epoch 1 = 0.5073250728949861\n",
-      "Val accuracy on epoch 1 = 0.4907802286880468\n"
+      "Train loss on epoch 1=0.46030625523659435\n",
+      "Val loss on epoch 1=0.18419986767204186\n",
+      "Train accuracy on epoch 1 = 0.7200159671532846\n",
+      "Val accuracy on epoch 1 = 0.9293791118421053\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████| 1372/1372 [07:03<00:00,  3.24it/s]\n",
-      "100%|█████████████████████████████████████████| 153/153 [00:41<00:00,  3.65it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train loss on epoch 2=0.5952035750183697\n",
-      "Val loss on epoch 2=0.6035956691682728\n",
-      "Train accuracy on epoch 2 = 0.6422095177559394\n",
-      "Val accuracy on epoch 2 = 0.6261887254278644\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████| 1372/1372 [06:55<00:00,  3.30it/s]\n",
-      "100%|█████████████████████████████████████████| 153/153 [00:42<00:00,  3.61it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train loss on epoch 3=0.5850541176974947\n",
-      "Val loss on epoch 3=0.5858582271859537\n",
-      "Train accuracy on epoch 3 = 0.6498238581392924\n",
-      "Val accuracy on epoch 3 = 0.6478717319326464\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████| 1372/1372 [06:55<00:00,  3.30it/s]\n",
-      "100%|█████████████████████████████████████████| 153/153 [00:40<00:00,  3.75it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train loss on epoch 4=0.4029335146987099\n",
-      "Val loss on epoch 4=0.19048277084149567\n",
-      "Train accuracy on epoch 4 = 0.793318756120198\n",
-      "Val accuracy on epoch 4 = 0.9366830065359477\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████| 1372/1372 [06:49<00:00,  3.35it/s]\n",
-      "100%|█████████████████████████████████████████| 153/153 [00:40<00:00,  3.80it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train loss on epoch 5=0.1421992018922034\n",
-      "Val loss on epoch 5=0.13909080071873914\n",
-      "Train accuracy on epoch 5 = 0.9448212767481456\n",
-      "Val accuracy on epoch 5 = 0.9446936273107341\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████| 1372/1372 [06:56<00:00,  3.29it/s]\n",
-      "100%|█████████████████████████████████████████| 153/153 [00:40<00:00,  3.75it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train loss on epoch 6=0.10946761939468258\n",
-      "Val loss on epoch 6=0.13068755533473164\n",
-      "Train accuracy on epoch 6 = 0.9595936588921283\n",
-      "Val accuracy on epoch 6 = 0.9473937905691807\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████| 1372/1372 [06:44<00:00,  3.39it/s]\n",
-      "100%|█████████████████████████████████████████| 153/153 [00:39<00:00,  3.83it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train loss on epoch 7=0.08235934715101674\n",
-      "Val loss on epoch 7=0.13952683211833822\n",
-      "Train accuracy on epoch 7 = 0.971870444606414\n",
-      "Val accuracy on epoch 7 = 0.9476552286179237\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████| 1372/1372 [06:56<00:00,  3.29it/s]\n",
-      "100%|█████████████████████████████████████████| 153/153 [00:40<00:00,  3.78it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train loss on epoch 8=0.06582125111326233\n",
-      "Val loss on epoch 8=0.16600501620715935\n",
-      "Train accuracy on epoch 8 = 0.9770066508746356\n",
-      "Val accuracy on epoch 8 = 0.9443872547617146\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████| 1372/1372 [06:49<00:00,  3.35it/s]\n",
-      "100%|█████████████████████████████████████████| 153/153 [00:40<00:00,  3.81it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train loss on epoch 9=0.05529092768537771\n",
-      "Val loss on epoch 9=0.15826339153512045\n",
-      "Train accuracy on epoch 9 = 0.9801711309755509\n",
-      "Val accuracy on epoch 9 = 0.9423325163087034\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|███████████████████████████████████████| 1372/1372 [06:47<00:00,  3.37it/s]\n",
-      "100%|█████████████████████████████████████████| 153/153 [00:40<00:00,  3.81it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train loss on epoch 10=0.04721802977680292\n",
-      "Val loss on epoch 10=0.19129617234046747\n",
-      "Train accuracy on epoch 10 = 0.9829286625364432\n",
-      "Val accuracy on epoch 10 = 0.9372385619512571\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "100%|██████████| 685/685 [07:30<00:00,  1.52it/s]\n",
+      " 37%|███▋      | 28/76 [00:20<00:35,  1.34it/s]"
      ]
     }
    ],
    "source": [
     "from tqdm import tqdm\n",
-    "epochs=10\n",
+    "epochs=5\n",
     "for epoch in range(epochs):\n",
     "    time.sleep(1)\n",
     "    total_train_loss = 0.0\n",
@@ -957,43 +857,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "7f35d877-3ea6-4de8-b6a9-5fdec672b00f",
+   "execution_count": null,
+   "id": "dc83d3a4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model, 'Sarcasm_Classifier.pt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "85b2f7ea-8b8a-4968-ab61-632b57c3051f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from torch.utils.tensorboard import SummaryWriter"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "5852ff05-8617-4e51-abe9-f3ff8af9ff4e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "writer = SummaryWriter('runs/experiment_1')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "d0ffc235-1449-4cbb-881d-dc21a89e45b9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "writer.add_graph(model, feature[0].reshape(1,48))\n",
-    "writer.close()"
+    "model_name = input()\n",
+    "torch.save(model.state_dict(), '{}.pth'.format(model_name))"
    ]
   },
   {
@@ -1002,12 +872,71 @@
    "id": "4806a116-90f2-4c60-bcf0-a42d5357c8c2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.eval()\n",
+    "count = 0\n",
+    "gts = []\n",
+    "model_preds = []\n",
+    "with torch.no_grad():\n",
+    "    for data in tqdm(testset):\n",
+    "        X, y = batch['token_list'].to(device), batch['label'].to(device)\n",
+    "\n",
+    "        output = model(X).squeeze()\n",
+    "        acc=categorical_accuracy(output,label)\n",
+    "        model_preds.extend(output.detach().cpu().numpy())\n",
+    "        gts.extend(y.detach().cpu().numpy())\n",
+    "        gt = y.squeeze(dim=1)\n",
+    "\n",
+    "        count += (model_preds == gt).sum()\n",
+    "\n",
+    "print(\"Accuracy on Test Data is {0:.4g}%\".format(\n",
+    "    (count.item()*100)/len(testset)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1b64183",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "print(classification_report(gts, model_preds))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14dcfa42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import metrics\n",
+    "import matplotlib.pyplot as plt\n",
+    "auc = metrics.roc_auc_score(gts, model_preds)\n",
+    "\n",
+    "false_positive_rate, true_positive_rate, thresolds = metrics.roc_curve(gts, model_preds)\n",
+    "\n",
+    "plt.figure(figsize=(10, 8), dpi=100)\n",
+    "plt.axis('scaled')\n",
+    "plt.xlim([0, 1])\n",
+    "plt.ylim([0, 1])\n",
+    "plt.title(\"AUC & ROC Curve\")\n",
+    "plt.plot(false_positive_rate, true_positive_rate, 'g')\n",
+    "plt.fill_between(false_positive_rate, true_positive_rate, facecolor='lightgreen', alpha=0.7)\n",
+    "plt.text(0.95, 0.05, 'AUC = %0.4f' % auc, ha='right', fontsize=12, weight='bold', color='blue')\n",
+    "plt.xlabel(\"False Positive Rate\")\n",
+    "plt.ylabel(\"True Positive Rate\")\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1021,7 +950,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
